@@ -204,7 +204,8 @@ public:
 		AUDIO_PROCESSOR,
 		REEL_TYPE,
 		REEL_LENGTH,
-		UPLOAD_AFTER_MAKE_DCP
+		UPLOAD_AFTER_MAKE_DCP,
+		REENCODE_J2K
 	};
 
 
@@ -296,6 +297,10 @@ public:
 		return _context_id;
 	}
 
+	bool reencode_j2k () const {
+		return _reencode_j2k;
+	}
+
 
 	/* SET */
 
@@ -326,6 +331,7 @@ public:
 	void set_reel_type (ReelType);
 	void set_reel_length (int64_t);
 	void set_upload_after_make_dcp (bool);
+	void set_reencode_j2k (bool);
 
 	/** Emitted when some property has of the Film is about to change or has changed */
 	mutable boost::signals2::signal<void (ChangeType, Property)> Change;
@@ -399,6 +405,7 @@ private:
 	/** Desired reel length in bytes, if _reel_type == REELTYPE_BY_LENGTH */
 	int64_t _reel_length;
 	bool _upload_after_make_dcp;
+	bool _reencode_j2k;
 
 	int _state_version;
 
