@@ -1,3 +1,7 @@
+2018-11-07  Carl Hetherington  <cth@carlh.net>
+
+	* Add button to force re-encode of JPEG2000 content.
+
 2018-10-23  Carl Hetherington  <cth@carlh.net>
 
 	* Updated nl_NL translation from Rob van Nieuwkerk.
